refactor: remove schemes from swagger config
- Remove @schemes annotation from swagger
- Keep BasePath as /
- Allows swagger to work with any protocol (http/https)
